# osg2vsg

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindShaderc.cmake  FindVSG.cmake  Findglslang.cmake
applications/: CMakeLists.txt
applications/osg2vsg/: CMakeLists.txt  osg2vsg.cpp
applications/osg2vsg_viewer/: CMakeLists.txt  GraphicsNodes.cpp  GraphicsNodes.h  SceneAnalysisVisitor.cpp  Trackball.cpp  Trackball.h  osg2vsg_viewer.cpp
applications/osggroups/: CMakeLists.txt  osggroups.cpp
applications/osgmaths/: CMakeLists.txt  osgmaths.cpp
applications/pdconv/: CMakeLists.txt  ConvertToVsg.cpp  ConvertToVsg.h  pdconv.cpp
applications/vsgglinterop/: CMakeLists.txt  CommandUtils.h  GLMemoryExtensions.h  GLSemaphore.cpp  GLSemaphore.h  ImageViewUtils.cpp  ImageViewUtils.h  SharedDescriptorImage.cpp  SharedDescriptorImage.h  SharedImage.cpp  SharedImage.h  SharedSemaphore.cpp  SharedSemaphore.h  SharedTexture.cpp  SharedTexture.h  SyncTextureDrawCallbacks.h  vsgglinterop.cpp
applications/vsgnodes/: vsgnodes.cpp
applications/vsgobjects/: vsgobjects.cpp
applications/vsgwithosg/: CMakeLists.txt  GLMemoryExtensions.cpp  GLMemoryExtensions.h  GLSemaphore.h  SharedTexture.cpp  SharedTexture.h  vsgwithosg.cpp
data/shaders/: defaultshader.frag  defaultshader.vert  fbxshader.frag  fbxshader.vert
include/osg2vsg/: ComputeBounds.h  Export.h  GeometryUtils.h  GraphicsNodes.h  ImageUtils.h  OSG.h  SceneAnalysis.h  SceneAnalysisVisitor.h  SceneBuilder.h  ShaderUtils.h  StateAttributes.h  convert.h
src/: CMakeLists.txt
src/osg2vsg/: BuildOptions.cpp  BuildOptions.h  CMakeLists.txt  ConvertToVsg.cpp  ConvertToVsg.h  GeometryUtils.cpp  GraphicsNodes.cpp  ImageUtils.cpp  OSG.cpp  Optimize.cpp  SceneAnalysis.cpp  SceneAnalysisVisitor.cpp  SceneBuilder.cpp  ShaderUtils.cpp  ShaderUtils.h  StateAttributes.cpp  convert.cpp  osg2vsgConfig.cmake
src/osg2vsg/glsllang/: ResourceLimits.cpp
src/osg2vsg/shaders/: defaultshader_frag.cpp  defaultshader_vert.cpp  fbxshader_frag.cpp  fbxshader_vert.cpp
src/osgPlugins/vsg/: CMakeLists.txt  ReaderWriterVSG.cpp
